# xau-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
docs/: DEPLOY.md
scripts/: entrypoint.sh
src/xau_ai/: __init__.py  cli.py
src/xau_ai/analysis/: __init__.py  gaps.py  indicators.py  swings.py
src/xau_ai/backtesting/: __init__.py  backtester.py
src/xau_ai/calibration/: __init__.py  calibrator.py
src/xau_ai/config/: __init__.py  settings.py
src/xau_ai/core/: __init__.py  context.py  exceptions.py  models.py  orchestrator.py  registry.py
src/xau_ai/data/: __init__.py  base.py  csv_provider.py  http.py  mt5_provider.py  oanda.py  resample.py  twelvedata.py
src/xau_ai/data/news/: __init__.py  events.py  faireconomy.py  providers.py
src/xau_ai/forecasting/: __init__.py  tracker.py
src/xau_ai/journal/: __init__.py  journal.py
src/xau_ai/notifications/: __init__.py  base.py  message.py  telegram.py
src/xau_ai/performance/: __init__.py  metrics.py
src/xau_ai/risk/: __init__.py  manager.py
src/xau_ai/signal/: __init__.py  generator.py
src/xau_ai/skills/: __init__.py  base.py
src/xau_ai/skills/correlation/: __init__.py  skill.py
src/xau_ai/skills/fvg/: __init__.py  skill.py
src/xau_ai/skills/liquidity/: __init__.py  skill.py
src/xau_ai/skills/market_structure/: __init__.py  skill.py
src/xau_ai/skills/mtf/: __init__.py  skill.py
src/xau_ai/skills/news/: __init__.py  skill.py
src/xau_ai/skills/order_blocks/: __init__.py  skill.py
src/xau_ai/skills/sessions/: __init__.py  skill.py
src/xau_ai/skills/trend/: __init__.py  skill.py
src/xau_ai/skills/volatility/: __init__.py  skill.py
src/xau_ai/skills/volume/: __init__.py  skill.py
src/xau_ai/validator/: __init__.py  validator.py
tests/: conftest.py  test_backtester.py  test_calibration.py  test_cli.py  test_context.py  test_correlation_skill.py  test_csv_provider.py  test_faireconomy.py  test_forecast_tracker.py  test_fvg_skill.py  test_gaps.py  test_indicators.py  test_journal.py  test_liquidity_skill.py  test_market_structure_skill.py  test_models.py  test_mt5_provider.py  test_mtf_skill.py  test_news.py  test_notifications.py  test_oanda.py  test_orchestrator.py  test_order_block_skill.py  test_performance.py  test_registry.py  test_resample.py  test_risk.py  test_session_skill.py  test_settings.py  test_signal_generator.py  test_swings.py  test_trend_skill.py  test_twelvedata.py  test_validator.py  test_volatility_skill.py  test_volume_skill.py
