[project]
name = "xau-ai"
version = "0.1.0"
description = "Modular AI analysis system for XAUUSD (Gold) intraday trading on M1/M5."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "black>=24.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "types-PyYAML>=6.0",
]
# Local Windows data source. Not installable on the Linux server (Windows-only).
mt5 = ["MetaTrader5>=5.0"]

[project.scripts]
xau = "xau_ai.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xau_ai"]

# ---------------------------------------------------------------------------
# Ruff (lint + format checks)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

# ---------------------------------------------------------------------------
# Black (formatting)
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# MyPy (strict typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# MetaTrader5 ships no type stubs and is Windows-only (optional dependency).
[[tool.mypy.overrides]]
module = ["MetaTrader5"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/xau_ai"]
branch = true
